# StarView

./: fix.sh  icons.sh  ime.patch  install-wlroots-debian.sh  meson.build  set-defaults.sh  starview.toml  test_gestures.sh  updateconfig.sh
.cache/clangd/index/: anim.c.A230E05121F24A0C.idx  anim.c.D40A6085BE682583.idx  background.c.63C9425C7ECB6213.idx  background.c.C3460323DA8C295A.idx  background.h.64BB903040569E72.idx  background.h.878F5B95EFF6237D.idx  config.c.69C75C6F316EDCE3.idx  config.c.7B2924B1DF551093.idx  config.c.988330FF9FA27283.idx  config.h.0F21FAD0E7E54017.idx  config.h.52A017F4FEB4F21D.idx  config_live.c.195ED6746DA0054E.idx  config_live.h.9DC2908318176803.idx  core.c.C6B475477DDAF562.idx  core.c.FF572F2A137E67CE.idx  core.h.1B6531C0FF70DBC9.idx  core.h.AB3EF97C88205CD4.idx  decor.c.3EE958DE5C88809F.idx  decor.c.65B671382C7ECC80.idx  decor.c.940E6C5F212FCDD1.idx  decor.c.9B7041E16ACAC9D8.idx  decor_config.c.A209E56D6563D762.idx  decor_visual.h.93C8E3647C868463.idx  decor_visual.h.FCB62DD062D41FCC.idx  draw.c.F401EF3D4F28F180.idx  gesture.c.7B5A370B73A25489.idx  gesture.c.BBC2583FF78E330D.idx  gesture.h.0BBD50445BE09544.idx  gesture.h.C80E1BBE0FF794EE.idx  gesture_config.c.99050598277F37AA.idx  gesture_config.h.19F9CA89F65C1DEC.idx  gesture_config.h.1B8B5841F57EBD6F.idx  ipc.c.32E6E8B83CE9331D.idx  ipc.c.9B0CE6BA22E50D45.idx  ipc.h.223ADBE2E1FC3A56.idx  ipc.h.9BD3878357785168.idx  main.c.9414CC88185941F5.idx  main.c.C075EC31F8629F29.idx  protocols.c.1B58809F1CA0F1D1.idx  protocols.h.6C94E62B149C0439.idx  (+28 more)
.github/workflow/: release-starview.yml
.github/workflows/: release-starview.yml
Docs/: Programming-For-Starview.md  QML.md
debug/: debug-panel.c
src/: anim.c  background.c  background.h  config.c  config.h  config_live.c  config_live.h  core.c  core.h  decor.c  decor_config.c  decor_visual.h  gesture.c  gesture.h  gesture_config.h  ipc.c  ipc.h  main.c  protocols.c  protocols.h  rules.c  script.c  script.h  shell.c  titlebar.c  titlebar_render.c  titlebar_render.h  util.c  visual.c  visual.h  visual_types.h  window.c  window.h
src/visuals/: config.c  decor.c  draw.c  helpers.c  render.c  stub.c  themes.c  visual.c
